--- a/week1/index.html
+++ b/week1/index.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<title>Page Title</title>
+
+</head>
+
+<body>
+	<section id="gradient">
+		<section id="black">
+
+
+			<header>
+
+				<nav>
+			
+					<ul>
+						<img id="logo" src="Images/Spotify-Logo.png" alt="Spotify-Logo" width="132px" height="41.9">
+						
+						<li><a href></a>Premium</li>
+						<li><a href></a>Help</li>
+						<li><a href></a>Downloaden</li>
+						<img id="pf" src="Images/profiel.jpg" alt="Justin-Lindhout" height="46" width="46">
+						<li><a href></a>Profiel</li>
+					</ul>
+
+				</nav>
+			</header>
+		</section>
+	</section>
+
+
+</body>
+
+</html>
