--- a/week4/index.html
+++ b/week4/index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+	<link rel="stylesheet" type="text/css" href="stylesheetv2.css">
+	<title>Page Title</title>
+
+</head>
+
+<body>
+	<section id=section1>
+		<div id="gradient">
+			<div id="black">
+
+<div id=nav>
+				<header>
+
+					<nav>
+
+						<ul>
+							<img id="logo" src="Images/Spotify-Logo.png" alt="Spotify-Logo" width="132px" height="41.9">
+
+							<li><a href></a>Premium</li>
+							<li><a href></a>Help</li>
+							<li><a href></a>Downloaden</li>
+							<img id="pf" src="Images/profiel.jpg" alt="Justin-Lindhout" height="46" width="46">
+							<li><a href></a>Profiel</li>
+						</ul>
+
+					</nav>
+				</header>
+				</div>
+			</div>
+		</div>
+		<div id=deel1>
+		<h4> Recent afgespeeld </h4>
+		</div>
+	</section>
+	<main>
+	bla bla
+	</main>
+
+
+</body>
+
+</html>
