--- a/week9/index.html
+++ b/week9/index.html
@@ -1,1 +1,70 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<title>Page Title</title>
+
+</head>
+
+<body>
+	<script src="myscripts.js">
+	</script>
+	<section id="gradient">
+		<section id="black">
+
+
+			<header>
+				<img id="logo" src="Images/Spotify-Logo.png" alt="Spotify-Logo" width="252" height="85">
+				<img id="pf" src="Images/profiel.jpg" alt="Justin-Lindhout" height="90" width="90">
+				<div class="container" onclick="myFunction(this)">
+					<div class="bar1"></div>
+					<div class="bar2"></div>
+					<div class="bar3"></div>
+				</div>
+			</header>
+			<main>
+			<section id="text">
+				<p>Recent afgespeeld</p>
+				<h1>Pik de draad weer op</h1>
+				<h3>Luister gewoon verder vanaf waar je de vorige keer was gebleven.</h3>
+				<button>LUISTER OP SPOTIFY.</button>
+				<ul>
+					<li>
+						<figure>
+						</figure>
+						<figcaption>
+						</figcaption>
+					</li>
+					<li>
+						<figure>
+						</figure>
+						<figcaption>
+						</figcaption>
+					</li>
+					<li>
+						<figure>
+						</figure>
+						<figcaption>
+						</figcaption>
+					</li>
+					<li>
+						<figure>
+						</figure>
+						<figcaption>
+						</figcaption>
+					</li>
+
+				</ul>
+			</section>
+
+
+
+		</section>
+	</section>
+
+	</main>
+
+</body>
+
+</html>
