--- a/week9/index.html
+++ b/week9/index.html
@@ -10,59 +10,99 @@
 <body>
 	<script src="myscripts.js">
 	</script>
-	<section id="gradient">
-		<section id="black">
 
 
-			<header>
-				<img id="logo" src="Images/Spotify-Logo.png" alt="Spotify-Logo" width="252" height="85">
-				<img id="pf" src="Images/profiel.jpg" alt="Justin-Lindhout" height="90" width="90">
-				<div class="container" onclick="myFunction(this)">
-					<div class="bar1"></div>
-					<div class="bar2"></div>
-					<div class="bar3"></div>
-				</div>
-			</header>
-			<main>
-			<section id="text">
-				<p>Recent afgespeeld</p>
-				<h1>Pik de draad weer op</h1>
-				<h3>Luister gewoon verder vanaf waar je de vorige keer was gebleven.</h3>
-				<button>LUISTER OP SPOTIFY.</button>
-				<ul>
-					<li>
-						<figure>
-						</figure>
-						<figcaption>
-						</figcaption>
-					</li>
-					<li>
-						<figure>
-						</figure>
-						<figcaption>
-						</figcaption>
-					</li>
-					<li>
-						<figure>
-						</figure>
-						<figcaption>
-						</figcaption>
-					</li>
-					<li>
-						<figure>
-						</figure>
-						<figcaption>
-						</figcaption>
-					</li>
 
-				</ul>
+
+	<header>
+		<img id="logo" src="Images/Spotify-Logo.png" alt="Spotify-Logo" width="252" height="85">
+		<img id="pf" src="Images/profiel.jpg" alt="Justin-Lindhout" height="90" width="90">
+		<div class="container" onclick="myFunction(this)">
+			<div class="bar1"></div>
+			<div class="bar2"></div>
+			<div class="bar3"></div>
+		</div>
+	</header>
+	<main>
+		<section id="gradient">
+			<section id="black">
+
+				<section id="text">
+					<h1>Op zoek naar muziek?</h1>
+					<h3>Luister nu naar de beste nieuwe releases.</h3>
+					<button>WEB PLAYER STARTEN</button>
+					<ul>
+						<li>
+							<figure>
+								<img src="Images/macmiller.jfif" alt="Album cover" width="460px" height="460px">
+							</figure>
+							<figcaption>
+								<h2 id="song">Blue world</h2>
+								<h4>Mac Miller</h4>
+								<h2 id="afspelen">NU AFSPELEN</h2>
+							</figcaption>
+						</li>
+						<li>
+							<figure>
+								<img src="Images/disclosure.jpg" alt="Album cover" width="460px" height="460px">
+							</figure>
+							<figcaption>
+								<h2 id="song">Omen</h2>
+								<h4>Disclosure</h4>
+								<h2 id="afspelen">NU AFSPELEN</h2>
+							</figcaption>
+						</li>
+						<li>
+							<figure>
+								<img src="Images/download.jfif" alt="Album cover" width="460px" height="460px">
+							</figure>
+							<figcaption>
+								<h2 id="song">Adore You</h2>
+								<h4>Harry Styles</h4>
+								<h2 id="afspelen">NU AFSPELEN</h2>
+							</figcaption>
+						</li>
+						<li>
+							<figure>
+								<img src="Images/theweeknd.jpg" alt="Album cover" width="460px" height="460px">
+							</figure>
+							<figcaption>
+								<h2 id="song">Blinding Lights</h2>
+								<h4>The Weeknd</h4>
+								<h2 id="afspelen">NU AFSPELEN</h2>
+							</figcaption>
+						</li>
+						<li>
+							<figure>
+								<img src="Images/rosalia-aute_cuture_s.jpg" alt="Album cover" width="460px" height="460px">
+							</figure>
+							<figcaption>
+								<h2 id="song">Aute Cuture</h2>
+								<h4>Rosalía</h4>
+								<h2 id="afspelen">NU AFSPELEN</h2>
+							</figcaption>
+						</li>
+						<li>
+							<figure>
+								<img src="Images/tchami%20rainforest.jpg" alt="Album cover" width="460px" height="460px">
+							</figure>
+							<figcaption>
+								<h2 id="song">Rainforrest</h2>
+								<h4>Tchami</h4>
+								<h2 id="afspelen">NU AFSPELEN</h2>
+							</figcaption>
+						</li>
+
+
+					</ul>
+				</section>
+
+
+
 			</section>
-
-
-
 		</section>
-	</section>
-
+		<section id="2">
+		</section>
 	</main>
 
 </body>
